--- a/views/trainers.pug
+++ b/views/trainers.pug
@@ -38,7 +38,26 @@
             </ul>
         </nav>
     </div>
-    
+    <div class="bodyImg">
+        <img src="../static/img/trainersbg.jpg" alt="Trainers page background image">
+    </div>
+    <div class="trainersHeading">
+        <p>About our <span>well experienced</span> trainers who unviels the <span>best in you</span></p>
+    </div>
+    <div class="quote">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, autem! Illo, quo recusandae molestias alias pariatur <span>illum accusamus</span>  blanditiis excepturi saepe dolore necessitatibus vel culpa, numquam doloru<span>illum accusamus</span>  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae sunt laboriosam inventore sapiente, cum totam repudiandae, blanditiis fugiat ratione sit repellendus dolorem et vitae reprehenderit temporibus ducimus, quidem nesciunt! Lorem ipsum dolor sit amet consec <span>tetur adipisicing elit. Repellendus voluptatum provident dolore a sapiente</span>! Quae eligendi voluptate sequi, perferendis voluptatibus accusantium magnam dicta consequatur distinctio repellat blanditiis harum nisi omnis.</p>
+    </div>
+    <div class="trainers">
+        <ul>
+            <a href="/trainer1">Trainer1</a>
+            <a href="/trainer2">Trainer2</a>
+            <a href="/trainer3">Trainer3</a>
+            <a href="/trainer4">Trainer4</a>
+        </ul>
+    </div>
+
+   
+</body>
 <script src="../static/script/trainers.js"></script>
 <script src="https://kit.fontawesome.com/a5afcc447e.js" crossorigin="anonymous"></script>
 </html>
