--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,253 +1,227 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    background-color: rgb(82, 82, 82);
-    color: white;
-    font-family: 'Ubuntu', sans-serif;
-    height: 100vh;
-    width: 100vw;
-    /* overflow: hidden; */
-    overflow-x: hidden;
+body {
+  background-color: rgb(82, 82, 82);
+  color: white;
+  font-family: "Ubuntu", sans-serif;
+  /* height: 100vh; */
+  width: 100vw;
+  overflow-x: hidden;
 }
-.navbar{
-    position: sticky;
-    top: 0px;
-    z-index: 20;
+.navbar {
+  position: sticky;
+  top: 0px;
+  z-index: 20;
 }
 .navbar nav {
-    overflow: hidden;
-    background-color: black;
-    /* border: 3px solid red; */
-    display: flex;
-    height: 10vh;
-     
-
+  overflow: hidden;
+  background-color: black;
+  display: flex;
+  height: 10vh;
 }
-.logo #logoImg img{
-    height: 5vh; 
-    width: 5vh;
-    margin: 1vh 1vw;
-    box-shadow: 2px 3px 3px red
+.logo #logoImg img {
+  height: 5vh;
+  width: 5vh;
+  margin: 1vh 1vw;
+  box-shadow: 2px 3px 3px red;
 }
-.logo #logoImg img:hover{ 
-    filter: hue-rotate(45deg);
+.logo #logoImg img:hover {
+  filter: hue-rotate(45deg);
 }
-.logo #logoText{ 
-    text-decoration: none;
-    color: red;
+.logo #logoText {
+  text-decoration: none;
+  color: red;
 }
-.logo #logoText:hover{
-    color: rgb(223, 30, 40);
+.logo #logoText:hover {
+  color: rgb(223, 30, 40);
 }
 .logo {
-    font-family: 'Dancing Script', cursive;
-    display: flex;
-    align-items: center;
-    font-size: 3vh;
-    color: red;
-    /* border: 2px solid pink; */
+  font-family: "Dancing Script", cursive;
+  display: flex;
+  align-items: center;
+  font-size: 3vh;
+  color: red;
 }
 .navbar nav ul {
-    position: absolute;
-    align-self: center;
-    right: 0;
-    /* border: 2px solid purple; */
+  position: absolute;
+  align-self: center;
+  right: 0;
 }
-.navbar nav ul li { 
-    /* padding:  0 2vw; */
-    list-style: none;
-    display: inline;
-
+.navbar nav ul li {
+  list-style: none;
+  display: inline;
 }
-.navbar ul li a{ 
-    text-decoration: none;
-    color: white;
-    font-size: 2vh;
-    padding: 3.8vh 2vw;
+.navbar ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: 2vh;
+  padding: 3.8vh 2vw;
 }
-.navbar ul li a:hover{ 
-    background-color: red;
-    color: black;
-    transition: background-color .3s ease-in-out, color .3s ease-in-out;
-    border-radius: 10px;
+.navbar ul li a:hover {
+  background-color: red;
+  color: black;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+  border-radius: 10px;
 }
-.bodyImg{
-    /* display: flex; */
-    position: relative;
+.bodyImg {
+  position: relative;
 }
 
-.bodyImg img{ 
-    height: 80vh;
-    width: 100vw;
+.bodyImg img {
+  height: 80vh;
+  width: 100vw;
 }
-.bodyImg .quote{
-    width: 50vw;
-    height: 40vh;
-    /* border: 2px solid red; */
-    position: absolute;
-    top: 20%;
-    left: 3%;
+.bodyImg .quote {
+  width: 50vw;
+  height: 40vh;
+  position: absolute;
+  top: 20%;
+  left: 3%;
 }
-#quote1{
-    /* border: 2px solid blue; */
-    font-size: 2vh ;
-    color: red;
-    font-weight: bold;
+#quote1 {
+  font-size: 2vh;
+  color: red;
+  font-weight: bold;
 }
-#quote1:hover{
-    color: rgb(255, 86, 86);
-    transition: color .2s ease-in-out;
+#quote1:hover {
+  color: rgb(255, 86, 86);
+  transition: color 0.2s ease-in-out;
 }
-#quote2 { 
-    /* border: 2px solid yellow; */
-    font-size: 5vh;
+#quote2 {
+  font-size: 5vh;
 }
 
 #quote2:hover {
-    color: rgb(83, 83, 83);
-    transition: color .2s ease-in-out;
+  color: rgb(83, 83, 83);
+  transition: color 0.2s ease-in-out;
 }
-.getStarted{
-    background-color: red;
-    width: 10vw;
-    height: 6vh;
-    margin: 8vh 0 0 5vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1vh 1vw;
-    color: black;
-    text-decoration: none;
-    font-size: 2vh;
-    font-weight: bold;
-}
-
-.getStarted:hover{
-    transition: background-color .2s ease-in-out, color .2s ease-in-out; 
-    color: red;
-    background-color: black;
+.getStarted {
+  background-color: red;
+  width: 10vw;
+  height: 6vh;
+  margin: 8vh 0 0 5vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1vh 1vw;
+  color: black;
+  text-decoration: none;
+  font-size: 2vh;
+  font-weight: bold;
 }
 
-.changeImg{
-    background-color: red;
-    width: 1.5vw;
-    height: 2vh;
-    display: inline-block;
-    margin: 10px;
-    border-radius: 20%;
-}
-.changeImg:hover{
-    transition: background-color .2s ease-in-out; 
-    background-color: gray;
-    cursor: pointer;
-}
-.box{
-    position: absolute;
-    bottom: 0;
-    padding: 2vh;
-    width: 100%;
-    text-align: center;
+.getStarted:hover {
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  color: red;
+  background-color: black;
 }
 
-.footer{
-    background-color: black;
-    color: red;
-    height: 9vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
+.changeImg {
+  background-color: red;
+  width: 1.5vw;
+  height: 2vh;
+  display: inline-block;
+  margin: 10px;
+  border-radius: 20%;
 }
-.footer img{
-    height: 9vh;
-    position: absolute;
-    width: 100%;
-    filter: blur(40px);
-    
+.changeImg:hover {
+  transition: background-color 0.2s ease-in-out;
+  background-color: gray;
+  cursor: pointer;
 }
-.footer p{
-    font-size: 1vh;
-    font-weight: bold;
-    z-index: 12;
+.box {
+  position: absolute;
+  bottom: 0;
+  padding: 2vh;
+  width: 100%;
+  text-align: center;
 }
- 
+
+.footer {
+  background-color: black;
+  color: red;
+  height: 9vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+.footer img {
+  height: 9vh;
+  position: absolute;
+  width: 100%;
+  filter: blur(40px);
+}
+.footer p {
+  font-size: 1vh;
+  font-weight: bold;
+  z-index: 12;
+}
+
 .navbar ul i {
-    display: none;
+  display: none;
 }
 .navbar2 {
-    height: 78vh;
-    bottom: 11vh;
-    width: 40vw;
+    height: fit-content;
+    width: 100vw;
     background-color: black;
     position: absolute;
     z-index: 30;
-    right: 0;
+    top: -50vh;
     display: none;
     color: white;
 }
 .navbar2 ul {
-    /* border: 2px solid aqua; */
-    align-items: center;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center; */
+  align-items: center;
 }
-.nav2li{
-
-    margin: 3vh 0;
-    /* border: 2px solid yellow; */
-    /* width: fit-content; */
-    text-align: center;
+.nav2li {
+  margin: 3vh 0;
+  text-align: center;
 }
 
-.nav2li{
-    list-style: none;
-
-
+.nav2li {
+  list-style: none;
 }
-.nav2li a{
-     padding: 10px 10px;
-     border-radius: 10px;
-    text-decoration: none;
+.nav2li a {
+  padding: 10px 10px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: red;
+  font-size: 3vh;
+  font-weight: bold;
+}
+.nav2li a:hover {
+  background-color: red;
+  color: black;
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+@media only screen and (max-width: 700px) {
+  .listItems a {
+    display: none;
+  }
+  .navbar ul i {
+    display: block;
+    width: 2vw;
+    height: 3vh;
+    position: absolute;
+    right: 6vh;
+    bottom: 0%;
+  }
+  .navbar ul i:hover {
+    cursor: pointer;
     color: red;
-    font-size: 3vh;
-    font-weight: bold;
+    transition: color 0.1s ease-in-out;
+  }
+  .navbar ul i:active {
+    color: brown;
+  }
+  .navbar2 {
+    display: block;
+    transition: top 0.1s ease-in-out;
+  }
 }
-.nav2li a:hover{
-    background-color: red;
-    color: black;
-    transition: color .3s ease-in-out, background-color .3s ease-in-out;
-}
-
-@media only screen and (max-width: 700px){
-    .listItems a{
-        display: none;
-    }
-    .navbar ul i  {
-        display: block;
-        width: 2vw;
-        height: 3vh;
-        position: absolute;
-        right: 6vh;
-        bottom: 0%;
-
-    }
-    .navbar ul i:hover{
-        cursor: pointer;
-        color: red;
-        transition: color .1s ease-in-out;
-    }
-    .navbar ul i:active{
-        color: brown;
-    }
-    .navbar2{
-        display: block;
-        right: -40vw;
-        transition: right .2s ease-in-out;
-    }
-}
-
