--- a/static/css/trainers.css
+++ b/static/css/trainers.css
@@ -1,152 +1,204 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    background-color: rgb(82, 82, 82);
-    color: white;
-    font-family: 'Ubuntu', sans-serif;
-    height: 100vh;
-    width: 100vw;
-    /* overflow: hidden; */
-    overflow-x: hidden;
+body {
+  
+  background-color: rgb(82, 82, 82);
+  color: white;
+  font-family: "Ubuntu", sans-serif;
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+  /* overflow: hidden; */
+   
 }
-.navbar{
-    position: sticky;
-    top: 0px;
-    z-index: 20;
+.bodyImg img{
+  /* opacity: 20%; */
+  z-index: -5;
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+}
+.navbar {
+  position: sticky;
+  top: 0px;
+  z-index: 20;
 }
 .navbar nav {
-    overflow: hidden;
-    background-color: black;
-    /* border: 3px solid red; */
-    display: flex;
-    height: 10vh;
-     
-
+  overflow: hidden;
+  background-color: black;
+  display: flex;
+  height: 10vh;
 }
-.logo #logoImg img{
-    height: 5vh; 
-    width: 5vh;
-    margin: 1vh 1vw;
-    box-shadow: 2px 3px 3px red
+.logo #logoImg img {
+  height: 5vh;
+  width: 5vh;
+  margin: 1vh 1vw;
+  box-shadow: 2px 3px 3px red;
 }
-.logo #logoImg img:hover{ 
-    filter: hue-rotate(45deg);
+.logo #logoImg img:hover {
+  filter: hue-rotate(45deg);
 }
-.logo #logoText{ 
-    text-decoration: none;
-    color: red;
+.logo #logoText {
+  text-decoration: none;
+  color: red;
 }
-.logo #logoText:hover{
-    color: rgb(223, 30, 40);
+.logo #logoText:hover {
+  color: rgb(223, 30, 40);
 }
 .logo {
-    font-family: 'Dancing Script', cursive;
-    display: flex;
-    align-items: center;
-    font-size: 3vh;
-    color: red;
-    /* border: 2px solid pink; */
+  font-family: "Dancing Script", cursive;
+  display: flex;
+  align-items: center;
+  font-size: 3vh;
+  color: red;
 }
 .navbar nav ul {
-    position: absolute;
-    align-self: center;
-    right: 0;
-    /* border: 2px solid purple; */
+  position: absolute;
+  align-self: center;
+  right: 0;
 }
-.navbar nav ul li { 
-    /* padding:  0 2vw; */
-    list-style: none;
-    display: inline;
-
+.navbar nav ul li {
+  list-style: none;
+  display: inline;
 }
-.navbar ul li a{ 
-    text-decoration: none;
-    color: white;
-    font-size: 2vh;
-    padding: 3.8vh 2vw;
+.navbar ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: 2vh;
+  padding: 3.8vh 2vw;
 }
-.navbar ul li a:hover{ 
-    background-color: red;
-    color: black;
-    transition: background-color .3s ease-in-out, color .3s ease-in-out;
-    border-radius: 10px;
+.navbar ul li a:hover {
+  background-color: red;
+  color: black;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+  border-radius: 10px;
 }
 .navbar ul i {
-    display: none;
+  display: none;
 }
 .navbar2 {
-    height: 78vh;
-    bottom: 11vh;
-    width: 40vw;
-    background-color: black;
-    position: absolute;
-    z-index: 30;
-    right: 0;
-    display: none;
-    color: white;
+  height: fit-content;
+  width: 100vw;
+  background-color: black;
+  position: absolute;
+  z-index: 30;
+  top: -50vh;
+  display: none;
+  color: white;
 }
 .navbar2 ul {
-    /* border: 2px solid aqua; */
-    align-items: center;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center; */
+  align-items: center;
 }
-.nav2li{
-
-    margin: 3vh 0;
-    /* border: 2px solid yellow; */
-    /* width: fit-content; */
-    text-align: center;
+.nav2li {
+  margin: 3vh 0;
+  text-align: center;
 }
 
-.nav2li{
-    list-style: none;
-
-
+.nav2li {
+  list-style: none;
 }
-.nav2li a{
-     padding: 10px 10px;
-     border-radius: 10px;
-    text-decoration: none;
+.nav2li a {
+  padding: 10px 10px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: red;
+  font-size: 3vh;
+  font-weight: bold;
+}
+.nav2li a:hover {
+  background-color: red;
+  color: black;
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+@media only screen and (max-width: 700px) {
+  .listItems a {
+    display: none;
+  }
+  .navbar ul i {
+    display: block;
+    width: 2vw;
+    height: 3vh;
+    position: absolute;
+    right: 6vh;
+    bottom: 0%;
+  }
+  .navbar ul i:hover {
+    cursor: pointer;
     color: red;
-    font-size: 3vh;
-    font-weight: bold;
+    transition: color 0.1s ease-in-out;
+  }
+  .navbar ul i:active {
+    color: brown;
+  }
+  .navbar2 {
+    display: block;
+    transition: top 0.1s ease-in-out;
+  }
 }
-.nav2li a:hover{
-    background-color: red;
-    color: black;
-    transition: color .3s ease-in-out, background-color .3s ease-in-out;
+.trainersHeading p{
+  text-align: center;
+  justify-content: center;
+  color: white;
+  font-size: 3vh;
 }
-
-@media only screen and (max-width: 700px){
-    .listItems a{
-        display: none;
-    }
-    .navbar ul i  {
-        display: block;
-        width: 2vw;
-        height: 3vh;
-        position: absolute;
-        right: 6vh;
-        bottom: 0%;
-
-    }
-    .navbar ul i:hover{
-        cursor: pointer;
-        color: red;
-        transition: color .1s ease-in-out;
-    }
-    .navbar ul i:active{
-        color: brown;
-    }
-    .navbar2{
-        display: block;
-        right: -40vw;
-        transition: right .2s ease-in-out;
-    }
+ span{
+  color: red
+}
+.trainersHeading p:hover{
+  color: gray; 
+  transition: color .2s ease-in-out;
+  
+}
+.trainers{
+  border: 2px solid yellow;
 }
 
+.trainers ul{
+  margin: 5vh;
+  /* border: 3px solid red; */
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  height: 60vh;
+  align-items: center;
+  border: 2px solid red;
+
+}
+
+ .quote{
+  /* border: 2px solid red; */
+  margin: 20px;
+  text-align: center;
+ }
+ 
+.trainers a {
+  
+  margin: 20px;
+  font-size: 3vh ; 
+  font-weight: bold;
+  background-color: red;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25vh;
+  height: 25vh;
+  border: 2px solid red;
+  color: black;
+  text-decoration: none;
+}
+
+.trainers a:hover{
+  transform: scale(1.2);
+  background-color: black;
+  color: red;
+  border: 3px solid red;
+  transition: all .3s ease-in-out;
+}
+ 
+ 
